apps/lab/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lab
  labels:
    kubernetes.io/metadata.name: lab
    backstage.io/kubernetes-id: lab
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
