apps/lab/base/lab-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lab-svc
  namespace: lab
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lab.diegoluisi.eti.br
  labels:
    app: lab
    version: 0.0.1
    backstage.io/kubernetes-id: lab
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: lab
