apps/lab/base/lab-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lab-vs
  namespace: lab
  labels:
    app: lab
    version: 0.0.1
    backstage.io/kubernetes-id: lab
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - lab.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: lab-svc
      weight: 100
